# zero-few-shot-attempts

./: .gitignore  LICENSE  README.md  check_mean_ser.py  config.yaml  evaluate.py  main.py  pyproject.toml
.github/workflows/: lint.yml  test.yml
results/: elephant-alpha_zero-shot.csv  gemini_gemini-2.5-flash_zero-shot.csv  gemini_gemini-3.1-flash-lite-preview_few-shot.csv  google_gemini-3.1-pro-preview_few-shot.csv  google_gemini-3.1-pro-preview_zero-shot.csv  meta-llama_llama-4-scout-17b-16e-instruct_zero-shot.csv  mistral_mistral-large-2411_zero-shot.csv  mistral_mistral-large-latest_few-shot.csv  mistral_mistral-large-latest_zero-shot.csv  openai_gpt-5.4-thinking_few-shot.csv  openai_gpt-5.4-thinking_zero-shot.csv  openai_gpt-5.4_few-shot.csv  openai_gpt-5.4_zero-shot.csv  qwen_qwen3.6-plus_free_zero-shot.csv
src/: config_schema.py  data_handler.py  evaluator.py  experiment_pipeline.py  litellm_client.py  model_client.py  openrouter_client.py
src/visualization/: visualization.py
test/: conftest.py  test_data_handler.py  test_evaluator.py  test_experiment_pipeline.py  test_model_client.py
test/visualization/: test_visualization.py
