[project]
name = "zero-few-shot-attempts"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pyyaml>=6.0.3",
    "easy-logging-formatter>=0.1.1",
    "litellm>=1.82.6",
    "editdistance>=0.8.1",
    "pandas>=3.0.1",
]



[project.optional-dependencies]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.15.1",
    "pytest-cov>=7.0.0",
    "pytest-mock>=3.0.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["test"]
addopts = "-v --tb=short --cov=src --cov-report=term-missing"
norecursedirs = ["train_data"]
filterwarnings = [
    "ignore:This process .* is multi-threaded, use of fork:DeprecationWarning",
    "ignore:.*scheduler.step().*not necessary.*:UserWarning"
]

[tool.coverage.report]
omit=["src/config_schema.py"]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
exclude = ["venv", ".venv", "__pycache__", "build", "dist", ".eggs", "*.egg", ".mypy_cache", ".pytest_cache"]
select = ["E", "F", "W", "C90", "B", "B9", "ANN", "COM", "D", "ERA", "ISC", "N", "Q000", "S", "SIM", "TID251", "UP", "YTT", "T"]
ignore = [
	"W191",  # indentation contains tabs
	"ERA001", # Found commented-out code
	"S311",  # Standard pseudo-random generators are not suitable for security/cryptographic purposes
	"D206",  # Docstring should be indented with spaces equal to the surrounding code
	"D100",  # Missing docstring in public module
	"D203",  # incorrect-blank-line-before-class
	"D213",  # multi-line-summary-second-line
	"UP035", # Import from `collections.abc`instead: ...
	"ANN401",# Dynamically typed expressions (typing.Any) are disallowed 
]

[tool.ruff.lint.per-file-ignores]
"test/**/*.py" = [
    "S101",    # Use of assert detected
    "D",       # All docstring rules
    "ANN",     # All type annotation rules
	"E501",   # Line too long
	"COM812",  # Missing trailing comma in a list or dict
	"ERA001", # Found commented-out code
]
[tool.ruff.format]
indent-style = "space"
